crates/vexor-compiler/tests/golden/error/output/if_missing_braces.err
parse error at line 4, column 24
  |
4 | let result = if r > 50 c else c
  |                        ^
expected `{`